@@ -1,3 +1,10 @@
+2010-11-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/test/test_component_padmonitor.py:
+	* flumotion/component/padmonitor.py:
+	  Make naming more uniform - an FREQUENCY is not an INTERVAL
+	  Document and comment.
+
 2010-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/producers/looper/looper.py:
